# server/dto/company.rs
@@ -12,4 +12,14 @@ pub(crate) struct ApiCompanyDto {
 	pub system: String,
 	#[serde(default)]
 	pub description: Option<String>,
+	#[serde(default)]
+	pub cover_link: Option<String>,
+}
+
+#[derive(Deserialize)]
+pub(crate) struct ApiUpdateCompanyDto {
+	pub name: String,
+	pub system: String,
+	#[serde(default)]
+	pub description: Option<String>,
 }
